common/force-app/main/default/objects/OpportunityLineItem/fields/Advised_Unit_Cert_Amount__c.field-meta.xml
<CustomField>
    <fullName>Advised_Unit_Cert_Amount__c</fullName>
    <formula>TotalPrice -  Investment_Contribution_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advised Unit Cert Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>