common/force-app/main/default/objects/OpportunityLineItem/fields/Contribution_Fee__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Fee__c</fullName>
    <label>Requested Contribution Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>