common/force-app/main/default/objects/OpportunityLineItem/fields/Contribution_Fee_Original__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Fee_Original__c</fullName>
    <label>Contribution Fee Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>