common/force-app/main/default/objects/OpportunityLineItem/fields/Current_Investment_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Investment_Value__c</fullName>
    <formula>ListPrice  *   Original_Invested_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Investment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>