common/force-app/main/default/objects/OpportunityLineItem/fields/Founder_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Founder_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Founder Campaign</label>
    <referenceTo>Founder_Campaign__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>