common/force-app/main/default/objects/OpportunityLineItem/fields/Investment_Contribution_Fee__c.field-meta.xml
<CustomField>
    <fullName>Investment_Contribution_Fee__c</fullName>
    <formula>IF( ISPICKVAL( Approval_Status__c , &apos;No Approval Required&apos;) || ISPICKVAL( Approval_Status__c , &apos;Completed&apos;) ,  Contribution_Fee__c ,  Contribution_Fee_Original__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Investment Contribution Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>