common/force-app/main/default/objects/OpportunityLineItem/fields/Number_Of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Units__c</fullName>
    <formula>Opportunity.Unit_Certificate_Amount__c / UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>