common/force-app/main/default/objects/OpportunityLineItem/fields/Original_Invested_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Original_Invested_Quantity__c</fullName>
    <label>Current Holdings</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>