common/force-app/main/default/objects/OpportunityLineItem/fields/Original_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Sales_Price__c</fullName>
    <label>Current Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>