common/force-app/main/default/objects/OpportunityLineItem/fields/PB_Trigger_ADMIN_ONLY__c.field-meta.xml
<CustomField>
    <fullName>PB_Trigger_ADMIN_ONLY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PB Trigger_ADMIN ONLY</label>
    <type>Checkbox</type>
</CustomField>