common/force-app/main/default/objects/OpportunityLineItem/fields/Product_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Record_Type__c</fullName>
    <formula>Product_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Record Type</label>
    <type>Text</type>
</CustomField>