common/force-app/main/default/objects/OpportunityLineItem/fields/VMatch_ADMIN_Temp__c.field-meta.xml
<CustomField>
    <fullName>VMatch_ADMIN_Temp__c</fullName>
    <formula>Opportunity.AccountId + &quot; &quot; +  Product_ID__c  + &quot; &quot; + TEXT( Opportunity.Unit_Certificate_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VMatch ADMIN Temp</label>
    <type>Text</type>
</CustomField>